tooling/nargo_cli/tests/snapshots/execution_success/struct_fields_ordering/execute__tests__force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "y",
        "type": {
          "kind": "struct",
          "path": "myStruct",
          "fields": [
            {
              "name": "foo",
              "type": {
                "kind": "integer",
                "sign": "unsigned",
                "width": 32
              }
            },
            {
              "name": "bar",
              "type": {
                "kind": "field"
              }
            }
          ]
        },
        "visibility": "public"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : 1",
    "private parameters indices : []",
    "public parameters indices : [0, 1]",
    "return value indices : []",
    "EXPR [ (1, _0) -5 ]",
    "EXPR [ (1, _1) -7 ]"
  ],
  "debug_symbols": "bY1bCsMgFET3cr/zoYYS6lZKCT7DBVHxUSiSvdeECin088xwZhpoI+u2orchA380cEGJgsF3akDOKEfhD8pFpAKc3ucJjNfAGZn3CSw6A/xG9ucE9J/A6DIEtvwIHWRC53Bbr789fomEQjrzRVu9urTlHUcz/JiCMromcyydXZ//AA==",
  "file_map": {
    "50": {
      "source": "// Note that fields are not in alphabetical order.\n// We want to check that this ordering is maintained\nstruct myStruct {\n    foo: u32,\n    bar: Field,\n}\n\nfn main(y: pub myStruct) {\n    assert(y.foo == 5);\n    assert(y.bar == 7);\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": []
}
